RESOLVED FIXED111656
OpenGLShims: fix check for ANGLE GLES2 extensions
https://bugs.webkit.org/show_bug.cgi?id=111656
Summary OpenGLShims: fix check for ANGLE GLES2 extensions
Sergio Correia (qrwteyrutiyoup)
Reported 2013-03-06 18:02:12 PST
OpenGLShims: fix check for ANGLE GLES2 extensions
Attachments
Proposed patch (952 bytes, patch)
2013-03-06 18:06 PST, Sergio Correia (qrwteyrutiyoup)
no flags
Patch (1.53 KB, patch)
2013-03-07 07:30 PST, Sergio Correia (qrwteyrutiyoup)
no flags
Sergio Correia (qrwteyrutiyoup)
Comment 1 2013-03-06 18:06:50 PST
Created attachment 191878 [details] Proposed patch
Sergio Correia (qrwteyrutiyoup)
Comment 2 2013-03-06 18:16:30 PST
The check for ANGLE GLES2 extensions is currently being overriden with checks for APPLE extensions in lookupOpenGLFunctionAddress()
Simon Hausmann
Comment 3 2013-03-07 06:48:06 PST
Comment on attachment 191878 [details] Proposed patch Good catch! r- due to missing ChangeLog though.
Sergio Correia (qrwteyrutiyoup)
Comment 4 2013-03-07 07:01:07 PST
(In reply to comment #3) > (From update of attachment 191878 [details]) > Good catch! > > r- due to missing ChangeLog though. Sure, I will update this :)
Sergio Correia (qrwteyrutiyoup)
Comment 5 2013-03-07 07:30:30 PST
Created attachment 191993 [details] Patch Proposed patch
WebKit Review Bot
Comment 6 2013-03-07 07:56:38 PST
Comment on attachment 191993 [details] Patch Clearing flags on attachment: 191993 Committed r145079: <http://trac.webkit.org/changeset/145079>
WebKit Review Bot
Comment 7 2013-03-07 07:56:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.