OpenGLShims: fix check for ANGLE GLES2 extensions https://bugs.webkit.org/show_bug.cgi?id=111656

Patch by Sergio Correia <sergio.correia@openbossa.org> on 2013-03-07
Reviewed by Simon Hausmann.

The check for ANGLE GLES2 extensions is currently being overriden
with checks for APPLE extensions in lookupOpenGLFunctionAddress().

No new tests. No user visible behavior changed.

* platform/graphics/OpenGLShims.cpp:
(WebCore::lookupOpenGLFunctionAddress):

Canonical link: https://commits.webkit.org/130080@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145079 268f45cc-cd09-0410-ab3c-d52691b4dbfc